<resources>
    <string name="app_name">YouOwnMe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">新建</string>
    <string name="delete">删除</string>
    <string name="rename">修改</string>
    <string name="about">关于</string>
    <string name="query">询问</string>
    <string name="yes">确定</string>
    <string name="deleteOk">删除成功</string>
    <string name="renameOk">修改成功</string>
    <string name="queryContent">是否要删除</string>
    <string name="no">取消</string>
    <string name="sui_li_name">给谁随礼</string>
    <string name="edit_name">姓名</string>
    <string name="sui_li_about">因何随礼</string>
    <string name="sui_li_money">随礼金额</string>
    <string name="sui_li_date">随礼日期</string>
    <string name="edit_about">关于</string>
    <string name="edit_money">金额</string>
    <string name="edit_date">日期</string>
    <string name="edit_page_title">修改随礼记录</string>
    <string name="newOk">新建成功</string>
    <string name="shou_li_records">修改收礼记录</string>
    <string name="shou_li_name">是谁贺礼</string>
    <string name="shou_li_about">因何贺礼</string>
    <string name="shou_li_money">贺礼金额</string>
    <string name="shou_li_date">贺礼日期</string>
    <string name="title_suili">随礼</string>
    <string name="title_home">首页</string>
    <string name="title_shouli">收礼</string>
    <string name="picture">picture</string>
    <string name="submit">点击某一天添加记录</string>
    <string name="add_suili_record">添加随礼记录</string>
    <string name="add_shouli_record">添加收礼记录</string>
    <string name="add_name">姓名</string>
    <string name="add_about">原因</string>
    <string name="add_money">金额</string>
    <string name="add_date">日期</string>
</resources>