<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/context_menu_item1"
        android:orderInCategory="100"
        android:title="@string/news"
        app:showAsAction="never" />
    <item
        android:id="@+id/context_menu_item2"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/context_menu_item3"
        android:orderInCategory="100"
        android:title="@string/rename"
        app:showAsAction="never" />
    <item
        android:id="@+id/context_menu_item4"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never"/>


</menu>